<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="resetPasswordVM" type="com.parassapplication.app.modules.resetpassword.data.viewmodel.ResetPasswordVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnpolygonsix"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearResetPassword"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <LinearLayout android:id="@+id/linearRowpolygonsix"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <FrameLayout android:id="@+id/frameStackpolygonsix"
                    android:layout_height="@dimen/_237pxv" android:layout_width="@dimen/_179pxh">
                    <ImageView android:id="@+id/imagePolygonSix"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_93pxh"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="@dimen/_96pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_polygon6}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_polygon6"/>
                    <FrameLayout
                        android:id="@+id/frameStackpolygonseven"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_237pxv" android:layout_width="@dimen/_179pxh">
                        <ImageView android:id="@+id/imagePolygonSeven"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_237pxh"
                            android:layout_width="@dimen/_179pxh"
                            android:scaleType="fitXY"
                            imageRes="@{@drawable/img_polygon7}"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_polygon7"/>
                    </FrameLayout>
                </FrameLayout>
                <ImageView android:id="@+id/imageFLEXILOGOThree"
                    android:layout_height="@dimen/_61pxh"
                    android:layout_marginBottom="@dimen/_155pxv"
                    android:layout_marginStart="@dimen/_61pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="@dimen/_108pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_flexilogo1_61x108}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_flexilogo1_61x108"/>
            </LinearLayout>

            <EditText
                android:id="@+id/txtEnterNewPassw"
                style="@style/txtSFProDisplayregular16"
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_63pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{resetPasswordVM.resetPasswordModel.txtEnterNewPassw}"
                tools:text="@string/msg_enter_new_passw" />

            <EditText
                android:id="@+id/txtConfirmNewPas"
                style="@style/txtSFProDisplayregular16"
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{resetPasswordVM.resetPasswordModel.txtConfirmNewPas}"
                tools:text="@string/msg_confirm_new_pas" />

            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSubmit"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_47pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="@dimen/_206pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_submit"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_submit"/>
            <FrameLayout android:id="@+id/frameStackpolygoneight"
                android:layout_gravity="end"
                android:layout_height="@dimen/_272pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_35pxv" android:layout_width="@dimen/_85pxh">
                <ImageView android:id="@+id/imagePolygonEight"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_172pxv"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_polygon8}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_polygon8"/>
                <ImageView android:id="@+id/imagePolygonTen"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_251pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_78pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_polygon10}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_polygon10"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
